# supp-slotter

./: .gitignore  AGENTS.md  HANDOFF.md  POC-NOTES.md  README.md  SKILL.md  brief.md  current-inventory.md  idea.md  justfile  planner.py  pyproject.toml  schedule.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  dependency-submission.yml  test.yml
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/notes/: ontology-dashboard-trait-namespace.md
.planning/reviews/: supplement-slot-data-review.md
data/: inventory.yaml  pillboxes.yaml  relations.yaml  slots.yaml  stacks.yaml  traits.yaml
data/dashboards/: antioxidant_protection.yaml  bleeding_load.yaml  bone_mineral_support.yaml  cholinergic_load.yaml  connective_tissue_support.yaml  cortisol_reduction.yaml  cyp_medication_metabolism_review.yaml  digestive_gut_support.yaml  electrolyte_balance.yaml  electrolyte_hydration_support.yaml  eye_retina_support.yaml  glp_incretin_interaction_review.yaml  glucose_glycemic_review.yaml  hormonal_reproductive_review.yaml  hypotensive_load.yaml  immune_barrier_review.yaml  joint_comfort_review.yaml  ldl_apob_control.yaml  methylation_support.yaml  mitochondrial_health.yaml  neurocognitive_support.yaml  serotonergic_load.yaml  skin_barrier_support.yaml  skin_support.yaml  sleep_recovery.yaml  stress_adaptogen_review.yaml  urinary_tract_review.yaml  vascular_health.yaml  vasodilation_no_pathway.yaml  workout_performance.yaml
data/goals/: antioxidant_protection.yaml  bleeding_load.yaml  cholinergic_load.yaml  cortisol_reduction.yaml  electrolyte_hydration_support.yaml  mitochondrial_health.yaml  neurocognitive_support.yaml  sleep_recovery.yaml  vascular_health.yaml  vasodilation_no_pathway.yaml  workout_performance.yaml
data/products/: acetyl_l_carnitine.yaml  airboy__nattokinase_6000_fu_120_caps__prd_175251bd63.yaml  allmax_essentials__caffeine__prd_be0sh5hdyd.yaml  animal__animal_flex_comprehensive_joint_care__prd_do96zy85ny.yaml  astaxanthin.yaml  best_naturals__acetyl_l_carnitine_alcar__prd_27f7b85aa6.yaml  biograce__vitamin_b5_pantothenic_acid__prd_8eff2491b7.yaml  california_gold_nutrition__nicotinamide_riboside_tartrate_nrt_complex__prd_ecl277i8db.yaml  coenzyme_b_complex.yaml  copper.yaml  country_life__coenzyme_b_complex_active_coenzymated_b_vitamins__prd_bb212cffc2.yaml  country_life__core_daily_1_for_women__prd_coglohvmzn.yaml  creatine.yaml  dihydroquercetin_complex.yaml  do4a__creatine_monohydrate__prd_2ca842627a.yaml  doctors_best__nac_detox_regulators__prd_955ea0c9e6.yaml  doctors_best__stabilized_r_lipoic_acid__prd_8jvb8ppsdq.yaml  doctors_best_nac_detox_regulators__n_acetyl_cysteine_nac__prd_955ea0c9e6.yaml  electrolyte_caps.yaml  (+68 more)
docs/: README.md  agent-product-flow.md  agent-stack-review.md  domain-model.md  effects-semantic-audit.md  iherb-product-intake.md  mcp-position.md  ontology-facts.md  ontology-v2.md  relations-model-audit.md
ontology/: assertion-model.yaml  governance-model.yaml  manifest.yaml  model.yaml  ontoclean.yaml  policies.yaml  relations.yaml  runtime-policy.yaml  runtime-protocol.yaml  scheduling-constraints.yaml  scheduling-model.yaml  supp_slotter.yaml  vocabulary-model.yaml  vocabulary.yaml
planner/: __main__.py  card_ids.py  cards.py  check_report.py  contracts.py  domain_constants.py  engine.py  io.py  maintenance.py  maintenance_atomic.py  maintenance_card_plan.py  maintenance_lock.py  maintenance_mapping.py  maintenance_probe.py  maintenance_rewrites.py  maintenance_substance_resolution.py  paths.py  schedule_types.py  schedule_writer.py  scheduling_constraint_execution.py  scheduling_constraint_matching.py  schema_validation.py  yaml_io.py
schema/: dashboard.schema.json  goal.schema.json  inventory.schema.json  pillboxes.schema.json  product.schema.json  relations.schema.json  slots.schema.json  stacks.schema.json  substance.schema.json  traits.schema.json
scripts/: card_audit.py  check_supply_chain_pins.py  crap_gate.py  generate_ontology.py  migrate_ontology_v1.py  migrate_slot_policy_governance.py  migrate_substance_cards.py  ontology_compiler.py  ontology_inventory.py  ontology_stack_spike.py  run_bounded.sh  run_unit_gate.py  test_run_bounded.sh
tests/: conftest.py  helpers.py  planner_fixture.py  scheduling_fixtures.py  test_advisory_search_contract.py  test_architecture_contracts.py  test_audit_command.py  test_canonical_scheduling_policies.py  test_card_reference_integrity.py  test_cli_surface.py  test_dashboard_review.py  test_dashboard_schema.py  test_effect_registry_quality.py  test_enzyme_governance_acceptance.py  test_find_command.py  test_governed_assignment_scoring.py  test_linkml_assertion_governance_schema.py  test_linkml_core_schema.py  test_linkml_cutover_baseline.py  test_linkml_scheduling_schema.py  test_maintenance.py  test_migration_normalize.py  test_ontology_artifacts.py  test_ontology_assertion_runtime.py  test_ontology_compiler_outputs.py  test_ontology_generated_contract.py  test_ontology_migration_baseline.py  test_ontology_repository_contract.py  test_ontology_shacl_fixtures.py  test_ontology_v1_migration.py  test_phase_01.py  test_phase_02.py  test_phase_03.py  test_plan_antagonizes.py  test_plan_prefer_with.py  test_plan_relation_scheduling.py  test_plan_review_with.py  test_plan_search.py  test_poc_surrealdb.py  test_primary_component_scoring.py  (+23 more)
(+584 files in other folders)
