[project]
name = "supp-slotter"
version = "0.0.0"
description = "Supplement slot planner — YAML-first ontology and scheduler."
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "surrealdb>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7",
    "ruff>=0.15.15",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [".planning", "schedule.yaml"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = ["E501"]  # docstrings can't always fit in 120 chars

[tool.pyright]
include = ["planner", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.coverage.run]
source = ["planner"]
omit = ["tests/*", "scripts/*", "planner/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 83
