[project]
name = "supp-slotter"
version = "0.0.0"
description = "Supplement slot planner — YAML-first ontology and scheduler."
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "surrealdb>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
    "basedpyright>=1.39.8",
    "import-linter>=2.3",
    "vulture>=2.14",
    "actionlint-py>=1.7.12.24",
]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [".planning", "schedule.yaml"]
preview = true

[tool.ruff.lint]
# Mirrors the mcp-strava quality profile, adapted to this smaller YAML-first repo:
# bug-catching core, high-signal modernization/tidiness rules, pathlib/datetime
# discipline, explicit noqa/type-ignore codes, and size/complexity ratchets.
explicit-preview-rules = true
select = ["E4", "E7", "E9", "F", "I", "B", "BLE", "UP", "C4", "PIE", "ISC", "RSE", "FLY", "RUF", "PERF", "SIM", "PTH", "DTZ", "PGH", "PLE", "LOG", "G", "FURB", "RET", "N818", "PLR2004", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0916", "PLR0917", "PLR1702"]
ignore = [
    "ISC001", # conflicts with ruff format
    "RUF001", # intentional Cyrillic names/notes in ontology data and docs
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PERF401", "DTZ", "PLR2004"]

[tool.ruff.lint.pylint]
max-branches = 11
max-statements = 45

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["planner", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportAny = "error"
reportExplicitAny = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "error"
reportMissingTypeArgument = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"

[tool.coverage.run]
source = ["planner"]
omit = ["tests/*", "scripts/*", "planner/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 83

[tool.vulture]
paths = ["planner", "tests"]
min_confidence = 80

[tool.pytest.ini_options]
# Leave no /tmp residue on green runs (shared host): passed tests' tmp_path dirs are
# removed at session end; only failing tests keep their dir, and only the latest run.
# Flip policy to "none" for zero retention even on failures.
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
testpaths = ["tests"]

[tool.importlinter]
root_package = "planner"

[[tool.importlinter.contracts]]
name = "Card loaders do not depend on engine or read model"
type = "forbidden"
source_modules = ["planner.cards"]
forbidden_modules = ["planner.engine", "planner.query_model"]

[[tool.importlinter.contracts]]
name = "Read model does not depend on engine"
type = "forbidden"
source_modules = ["planner.query_model"]
forbidden_modules = ["planner.engine"]
